content/boundary/v1.0.x/content/docs/targets/create/tcp/mysql.mdx
---
layout: docs
page_title: Create a MySQL TCP target
description: >-
  Learn how to create a MySQL TCP target.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-01-23T14:04:39-07:00
last_modified: 2026-02-02T11:22:20-07:00
# END AUTO GENERATED METADATA
---

# Create a MySQL TCP target

TCP targets provide a generic way to connect to any service Boundary has access to, including MySQL databases.

The following examples use a direct target address for simplicity, but HashiCorp recommends that you [configure host catalogs and host sets](/boundary/docs/hosts) for scaled production deployments.

Complete the following steps to create a TCP target to connect to a MySQL server.

<Tabs>
<Tab heading="Admin Console" group="admin">

1. Log in to Boundary.
1. Select an org, and then select the project where you want to create a target.
1. Select **Targets** under **Project Actions**.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes, such as `mysql-dev-server`.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create a TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `3306`.
   - **Aliases** (Optional) A unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. To create an alias, complete the following fields, and then click **Add**:
      - **Select scope**: Select the scope in which to create the alias. You must create org and project suffixes before you can create an alias in the target's project scope. Otherwise, you can only create the alias in the `global` scope. Refer to [Create a suffix for a scope](/boundary/docs/targets/configuration/create-suffix) for more information.
      - **Alias value**: Enter the string that you want to use as the alias to represent the target. An alias's value can be a hostname or a DNS-like string.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Use the following command to create an SSH target named `mysql-dev-server` with an alias `mysql`, with a direct target address of `10.0.0.10` and a default connection port of `3306`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "mysql-dev-server" \
     -with-alias-value "mysql" \
     -address "10.0.0.10" \
     -default-port 3306
   ```

  You must provide the `scope-id` field when you create a target.

  Refer to the [targets](/boundary/docs/domain-model/targets) domain model documentation for more fields that you can use when you create targets, and the [`targets create`](/boundary/docs/commands/targets/create) command for all the CLI options.

</Tab>
<Tab heading="Terraform" group="terraform">

You can define a target and target alias using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest):

```hcl
resource "boundary_target" "mysql" {
  name         = "mysql-dev-server"
  description  = "MySQL dev server on Ubuntu"
  type         = "tcp"
  address      = "10.0.0.10"
  default_port = "3306"
  scope_id     = boundary_scope.project.id
}

resource "boundary_alias_target" "mysql" {
  name                      = "mysql"
  description               = "Target alias for mysql-dev-server"
  scope_id                  = "global"
  value                     = "mysql"
  destination_id            = boundary_target.mysql.id
}
```

</Tab>
</Tabs>

## Configure a brokered application credential

@include 'configuration-reference/credentials/configure-brokered-credentials.mdx'

You can configure credentials for the TCP target using:

- Static credentials (`username_password` or `ssh_private_key`)
- Vault generic credential library

Refer to the [Configure targets with credential brokering](/boundary/docs/credentials/configure-credential-brokering) page to learn how to configure a target with credential brokering.

## Next steps

To learn how to connect to a target, refer to [Connection workflows](/boundary/docs/targets/connections).

To use target aliases to connect to targets:

1. [Create a target alias](/boundary/docs/targets/configuration/create-target-alias)
1. [Connect to a target using an alias](/boundary/docs/targets/connections/connect-target-alias)
1. After you set up a target alias, you can optionally [Configure transparent sessions for end users](/boundary/docs/targets/configuration/configure-transparent-sessions).